argocd-k8s/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-frontend
spec:
  ingressClassName: nginx
  rules:
    
    - host: argocd.uidai.net.in
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-fe
              port:
                number: 80
